letPoly/testcases/letPoly/ill-Typed/heterogeneousList.lam
cons (true) (cons (zero) (nil))